[gd_scene load_steps=15 format=3 uid="uid://buuxxqmi7pdtv"]

[ext_resource type="Script" path="res://Player.gd" id="1_8k7ne"]
[ext_resource type="Texture2D" uid="uid://c86uo485qgxyc" path="res://assets/sprites/doll/Torso.png" id="1_v6lnn"]
[ext_resource type="Texture2D" uid="uid://cc6lagnohavbj" path="res://assets/sprites/doll/Head.png" id="2_uopml"]
[ext_resource type="Texture2D" uid="uid://ddyrwjpycrjie" path="res://assets/sprites/doll/R.Arm.png" id="3_tqnfo"]
[ext_resource type="Texture2D" uid="uid://c3fuqxu4eaqmn" path="res://assets/sprites/doll/L.Arm.png" id="4_fl4hg"]
[ext_resource type="Texture2D" uid="uid://bc8fknry1hyal" path="res://assets/sprites/doll/R.Leg.png" id="5_r5q3a"]
[ext_resource type="Texture2D" uid="uid://c4u6rsavymogx" path="res://assets/sprites/doll/L.Leg.png" id="6_wx62j"]
[ext_resource type="Script" path="res://MainCamera.gd" id="8_pfhr2"]
[ext_resource type="Texture2D" uid="uid://ugl5bshhvvl3" path="res://assets/sprites/needle/needle.png" id="9_7eluf"]
[ext_resource type="PackedScene" uid="uid://dianel4p2kxqg" path="res://needle.tscn" id="9_hvc2j"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0yhb5"]
radius = 3.0
height = 14.0

[sub_resource type="CircleShape2D" id="CircleShape2D_iayct"]
radius = 7.0

[sub_resource type="CircleShape2D" id="CircleShape2D_6xb3m"]
radius = 1.0

[sub_resource type="CircleShape2D" id="CircleShape2D_4wvmk"]
radius = 19.0263

[node name="Player" type="CharacterBody2D"]
collision_layer = 0
script = ExtResource("1_8k7ne")

[node name="PlayerSprite" type="Node2D" parent="."]
z_index = 1
position = Vector2(0, 13)
scale = Vector2(1.5, 1.5)

[node name="Torso" type="Sprite2D" parent="PlayerSprite"]
position = Vector2(0, -15)
texture = ExtResource("1_v6lnn")

[node name="Head" type="Sprite2D" parent="PlayerSprite/Torso"]
position = Vector2(-1, 0)
texture = ExtResource("2_uopml")

[node name="Arm_Front" type="Sprite2D" parent="PlayerSprite"]
z_index = 2
position = Vector2(-3, -16)
texture = ExtResource("3_tqnfo")
centered = false
offset = Vector2(-13, -15)

[node name="Arm_Back" type="Sprite2D" parent="PlayerSprite"]
z_index = -2
position = Vector2(-1, -15)
texture = ExtResource("4_fl4hg")
centered = false
offset = Vector2(-13, -16)

[node name="Leg_Front" type="Sprite2D" parent="PlayerSprite"]
z_index = 1
position = Vector2(-2, -9)
texture = ExtResource("5_r5q3a")
centered = false
offset = Vector2(-14, -21.385)

[node name="Leg_Back" type="Sprite2D" parent="PlayerSprite"]
z_index = -1
position = Vector2(0, -10)
texture = ExtResource("6_wx62j")
centered = false
offset = Vector2(-16, -21)

[node name="BigBodyCollider" type="CollisionShape2D" parent="."]
position = Vector2(0, 5)
shape = SubResource("CapsuleShape2D_0yhb5")

[node name="BigHeadCollider" type="CollisionShape2D" parent="."]
position = Vector2(-1, -10)
shape = SubResource("CircleShape2D_iayct")

[node name="SmallCollider" type="CollisionShape2D" parent="."]
position = Vector2(0, -4)
shape = SubResource("CircleShape2D_6xb3m")

[node name="CollisionIncomingRaycast" type="RayCast2D" parent="."]
position = Vector2(0, 1)
target_position = Vector2(0, 30)

[node name="Camera" type="Camera2D" parent="."]
position = Vector2(0, 13)
script = ExtResource("8_pfhr2")

[node name="DirectionIndicator" type="Node2D" parent="."]

[node name="LittleArrow" type="Sprite2D" parent="DirectionIndicator"]
texture = ExtResource("9_7eluf")

[node name="LittleBallsContainer" type="Node2D" parent="DirectionIndicator"]

[node name="Needle" parent="." instance=ExtResource("9_hvc2j")]
rotation = 1.5708

[node name="Area2D" type="Area2D" parent="." groups=["player"]]
position = Vector2(0, 13)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -15)
shape = SubResource("CircleShape2D_4wvmk")

[connection signal="going_to_move" from="." to="Camera" method="_on_player_going_to_move"]
[connection signal="going_to_stop" from="." to="Camera" method="_on_player_going_to_stop"]
